update: body font family

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -5,7 +5,7 @@
 @tailwind utilities;
 
 body {
-    font-family: 'Mona Sans', Helvetica, Arial, sans-serif;
+    font-family: 'Mono Sans', 'Microsoft Yahei','PingFang SC', Helvetica, Arial, sans-serif;
   }
 
 .preview {
